Changes in version: rpsychi_0.7 (2011-11-12)

  o ind.t.test.Rd: change title
  o ind.t.teset.second.Rd: change title
  o dep.t.test.Rd: change title
  o dep.t.test.second.Rd: change title 
  o ind.oneway.Rd: change title
  o ind.oneway.second.Rd: change title
  o dep.oneway.Rd: change title
  o dep.oneway.second.Rd: change title
  o ind.prop.Rd: change title
  o ind.prop.second.Rd: change title
    
Changes in version: rpsychi_0.6 (2011-10-31)
  o ind.t.teset.second.R: create a specification for estimating unbiased standardized mean difference.
  o ind.t.teset.R: create a specification for estimating unbiased standardized mean difference.

Changes in version: rpsychi_0.5 (2011-10-29)
  o ind.prop.R: modify specifications of reference for independent and dependent variable.
  o ind.prop.second.R: modify specifications of reference for independent variable.


Changes in version: rpsychi_0.4 (2011-09-07)
  o Corrected fatal errors in version 0.3 relating to aggregate()


Changes in version: rpsychi_0.3 (2011-09-06)
  o formatted.R, formatted.Rd: add new function for printing output
  o dep.t.test.R: correction of a bug
  o dep.oneway.R: correction of a bug
  o Did not depend the library(doBy)


Changes in version: rpsychi_0.2 (2010-02-09)
  o dep.t.test.Rd: correction of a bug in the example section
  o ind.oneway.second.Rd, ind.twoway.second.Rd, rpsychi-package.Rd: update the reference to Cohen B
  o ind.twoway.R, ind.twoway.Rd: add new function for two-way analysis of variance using individual data


Changes in version: rpsychi_0.1 (2010-02-07)
  o dep.t.test.R: correction of a bug
  o ind.twoway.second.R, ind.twoway.second.Rd, power.f2.R, power.f2.Rd: add new function for two-way analysis of variance using published work
