@@ -1,6 +1,6 @@
-1bd76846b7ea7514390317bb13340708 *DESCRIPTION
+c69664fec86f01dc0dfa7f0dad846346 *DESCRIPTION
 e7007e0cee92974b92d901209ac0f608 *NAMESPACE
-79fe92278acf20e18e4e629341d716f3 *NEWS
+92d5bf4471f49b62df50bbd5fea7660d *NEWS
 bc821e650439b49755691760af82a708 *R/FNONCT.R
 9390ae64806fa19a0cd42d1a5e2a048e *R/dep.oneway.R
 0ec66411c3107522151eb429365c29e7 *R/dep.oneway.second.R
@@ -16,7 +16,7 @@ b939c39631dc926574f2c0237f555ddb *R/ind.prop.R
 6e9a610fb950b11c49cde7ba3a9908b2 *R/ind.t.test.second.R
 8d0c32f87fd6f3b6344829f771507370 *R/ind.twoway.R
 19414d665457a54c1d7c33a2fff30bc0 *R/ind.twoway.second.R
-c651049f04901a51393335ced4e20836 *R/lower2R.R
+01a46417494270d8caebb944cb287ca3 *R/lower2R.R
 a1905e38ebb02d7b0de9de06dd0b80fa *R/md.pattern2.R
 9debe0226c2fad633308e0a573f7a24f *R/multreg.R
 7ee7de0f3c660b2e8c6655b24d945db1 *R/multreg.second.R
