@@ -1,5 +1,8 @@
-Changes in version: rpsychi_0.7 (2011-11-12)
+Changes in version: rpsychi_0.8 (2012-01-03)
+  o lower2R: correction of a bug
 
+
+Changes in version: rpsychi_0.7 (2011-11-12)
   o ind.t.test.Rd: change title
   o ind.t.teset.second.Rd: change title
   o dep.t.test.Rd: change title
@@ -11,9 +14,11 @@ Changes in version: rpsychi_0.7 (2011-11-12)
   o ind.prop.Rd: change title
   o ind.prop.second.Rd: change title
     
+
 Changes in version: rpsychi_0.6 (2011-10-31)
   o ind.t.teset.second.R: create a specification for estimating unbiased standardized mean difference.
   o ind.t.teset.R: create a specification for estimating unbiased standardized mean difference.
+
 
 Changes in version: rpsychi_0.5 (2011-10-29)
   o ind.prop.R: modify specifications of reference for independent and dependent variable.
@@ -40,4 +45,3 @@ Changes in version: rpsychi_0.2 (2010-02-09)
 Changes in version: rpsychi_0.1 (2010-02-07)
   o dep.t.test.R: correction of a bug
   o ind.twoway.second.R, ind.twoway.second.Rd, power.f2.R, power.f2.Rd: add new function for two-way analysis of variance using published work
-
